--- a/package.json
+++ b/package.json
@@ -1,18 +1,39 @@
 {
   "name": "reactnative_videocalling",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@config-plugins/react-native-webrtc": "^5.0.0",
+    "@expo/config-plugins": "^5.0.2",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/stack": "^6.3.10",
+    "@supersami/rn-foreground-service": "^2.1.0",
     "expo": "~47.0.9",
+    "expo-dev-client": "~2.0.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "process": "^0.11.10",
+    "process-nextick-args": "^2.0.1",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-paper": "^5.1.2",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-simple-peer": "^0.1.5",
+    "react-native-webrtc": "^106.0.1",
+    "socket.io-client": "^4.5.4",
+    "url": "^0.11.0",
+    "util": "^0.12.5",
+    "utils": "^0.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
